# hass_teleco_daisy

./: CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  ruff.toml
.github/workflows/: validate.yml
custom_component/teleco_daisy/: __init__.py  config_flow.py  hub.py  manifest.json
custom_components/teleco_daisy/: __init__.py  climate.py  config_flow.py  const.py  cover.py  hub.py  light.py  manifest.json
custom_components/teleco_daisy/translations/: cs.json  en.json
