[project]
name = "hass-teleco-daisy"
version = "0.1.6"
description = "Home Assistant custom component for Teleco Automation Daisy"
readme = "README.md"
requires-python = ">=3.13"
# ! REMEMBER the manifest.json
dependencies = [
    "teleco-daisy>=0.1.5",
]

[dependency-groups]
dev = [
    "homeassistant>=2025.1.0",
    "ruff>=0.12.4",
]
